# qtquickcontrols2-with-cmake

./: CMakeLists.txt  README.md
qqc2-demo/: CMakeLists.txt  main.cpp  qml.qrc
qqc2-demo/qml/: main.qml
